v4/utils.wechat.md
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) &gt; [utils](./utils.md) &gt; [Wechat](./utils.wechat.md)

## Wechat class

对微信 JSSDK 的封装。

**Signature:**

```typescript
export declare class Wechat 
```

## Example


```typescript
const wechat = new Wechat()
getWechatConfigAsync().then(config => {
  wechat.config(config)
})
wechat.updateShareData({
  title: '分享标题',
  desc: '分享描述',
  link: '分享链接',
  imgUrl: '缩略图地址',
})
wechat.invoke('scanQRCode').then(res => {
  // => API 调用结果
})
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(params)](./utils.wechat._constructor_.md) |  | 构造函数。 |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [configParams](./utils.wechat.configparams.md) |  | [WechatConfigParams](./utils.wechatconfigparams.md) | 注入微信 <code>JSSDK</code> 的权限验证配置参数。 |
|  [uploadImage](./utils.wechat.uploadimage.md) |  | (params: [WechatUploadImageParams](./utils.wechatuploadimageparams.md)<!-- -->) =&gt; Promise&lt;[WechatUploadImageResult](./utils.wechatuploadimageresult.md)<!-- -->&gt; | <p>上传图片。</p><p>内部已作处理保证同时只能有一个图片在上传。</p><p>\*\*备注：\*\* 上传图片有效期3天， 可用微信多媒体接口下载图片到自己的服务器， 此处获得的服务器端 ID 即 <code>media_id</code>。</p> |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [beforeInvoke(cb)](./utils.wechat.beforeinvoke.md) |  |  |
|  [checkJsApi(jsApiList)](./utils.wechat.checkjsapi.md) |  | 判断当前客户端版本是否支持指定 JS 接口。 |
|  [chooseImage(params)](./utils.wechat.chooseimage.md) |  | 选择图片。 |
|  [closeWindow()](./utils.wechat.closewindow.md) |  | 关闭当前网页窗口。 |
|  [config(params)](./utils.wechat.config.md) |  | 注入微信 <code>JSSDK</code> 的权限验证配置。 |
|  [getLocation(params)](./utils.wechat.getlocation.md) |  | 获取地理位置接口。 |
|  [hideAllNonBaseMenuItems()](./utils.wechat.hideallnonbasemenuitems.md) |  | 隐藏所有的非基础菜单项。 |
|  [hideNonBaseMenuItems(menuList)](./utils.wechat.hidenonbasemenuitems.md) |  | 批量隐藏非基础菜单项。 |
|  [invoke(jsApi, params)](./utils.wechat.invoke.md) |  | 调用 JSSDK 的 API 方法。 |
|  [isReady()](./utils.wechat.isready.md) |  | 微信 JSSDK 是否准备好可用。 |
|  [onError(callback)](./utils.wechat.onerror.md) |  | 错误处理。 |
|  [openLocation(params)](./utils.wechat.openlocation.md) |  | 使用微信内置地图查看位置。 |
|  [previewImage(params)](./utils.wechat.previewimage.md) |  | 预览图片。 |
|  [requestPayment(params)](./utils.wechat.requestpayment.md) |  | 发起微信支付。 |
|  [showAllNonBaseMenuItems()](./utils.wechat.showallnonbasemenuitems.md) |  | 显示所有的非基础菜单项。 |
|  [showNonBaseMenuItems(menuList)](./utils.wechat.shownonbasemenuitems.md) |  | 批量显示非基础菜单项。 |
|  [updateShareData(params)](./utils.wechat.updatesharedata.md) |  | <p>设置分享数据。</p><p>\*\*注意\*\*：每次分享的数据会和上次分享的数据合并作为最终分享的数据，因此，可以设置全局的分享数据。</p> |

